...
                  text: 'Amigos',
                  key: Key('friends_button'),
                ),
                GButton(
                  icon: Icons.person,
                  text: 'Perfil',
                  key: Key('profile_button'),
                ),
              ],
            )),
      ),
      body: _screens[_selectedIndex],
    );
...
